--- a/Biblioteca Interactiva Municipal/nbproject/project.properties
+++ b/Biblioteca Interactiva Municipal/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mssql-jdbc-7.0.0.jre8.jar=build/web/WEB-INF/lib/mssql-jdbc-7.0.0.jre8.jar
+file.reference.mssql-jdbc-7.0.0.jre8.jar=mssql-jdbc-7.0.0.jre8.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
