--- a/Biblioteca Interactiva Municipal/nbproject/project.properties
+++ b/Biblioteca Interactiva Municipal/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
 excludes=
 file.reference.gson-2.6.2.jar=gson-2.6.2.jar
 file.reference.mssql-jdbc-7.0.0.jre8.jar=mssql-jdbc-7.0.0.jre8.jar
+file.reference.mssql-jdbc-7.0.0.jre8.jar-1=mssql-jdbc-7.0.0.jre8.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,6 +48,7 @@ javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
     ${file.reference.mssql-jdbc-7.0.0.jre8.jar}:\
+    ${file.reference.mssql-jdbc-7.0.0.jre8.jar-1}:\
     ${file.reference.gson-2.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
