--- a/Biblioteca Interactiva Municipal/nbproject/project.properties
+++ b/Biblioteca Interactiva Municipal/nbproject/project.properties
@@ -28,7 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.activation.jar=C:\\Users\\Kenneth\\Desktop\\activation.jar
 file.reference.gson-2.6.2.jar=gson-2.6.2.jar
+file.reference.mail.jar=C:\\Users\\Kenneth\\Desktop\\mail.jar
 file.reference.mssql-jdbc-7.0.0.jre8.jar=mssql-jdbc-7.0.0.jre8.jar
 file.reference.mssql-jdbc-7.0.0.jre8.jar-1=mssql-jdbc-7.0.0.jre8.jar
 includes=**
@@ -49,7 +51,9 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${file.reference.mssql-jdbc-7.0.0.jre8.jar}:\
     ${file.reference.mssql-jdbc-7.0.0.jre8.jar-1}:\
-    ${file.reference.gson-2.6.2.jar}
+    ${file.reference.gson-2.6.2.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
