--- a/Biblioteca Interactiva Municipal/nbproject/project.properties
+++ b/Biblioteca Interactiva Municipal/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.Documents-BIM=..
 file.reference.gson-2.6.2.jar=gson-2.6.2.jar
 file.reference.mssql-jdbc-7.0.0.jre8.jar=mssql-jdbc-7.0.0.jre8.jar
 file.reference.mssql-jdbc-7.0.0.jre8.jar-1=mssql-jdbc-7.0.0.jre8.jar
@@ -44,7 +45,7 @@ j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:$
 j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
@@ -90,7 +91,8 @@ source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
-war.content.additional=
+war.content.additional=\
+    ${file.reference.Documents-BIM}
 war.ear.name=${war.name}
 war.name=Biblioteca_Interactiva_Municipal.war
 web.docbase.dir=web
